@@ -1,10 +1,10 @@
 (defproject com.zensols.tools/mkproj "0.1.0-SNAPSHOT"
   :description "Generates boilerplate projects"
   :url "https://github.com/plandes/Natural Language Parse"
-  :license {:name "Apache License version 2.0"
-            :url "https://www.apache.org/licenses/LICENSE-2.0"
+  :license {:name "MIT"
+            :url "https://opensource.org/licenses/MIT"
             :distribution :repo}
-  :plugins [[lein-codox "0.10.1"]
+  :plugins [[lein-codox "0.10.3"]
             [org.clojars.cvillecsteele/lein-git-version "1.2.7"]]
   :codox {:metadata {:doc/format :markdown}
           :project {:name "Boilerplate projects"}
@@ -42,11 +42,11 @@
                                     ([:mainClass "zensols.mkproj.core"]
                                      [:id "mkproj"])]]
                                   [:environmentSetupFileName "setupenv"])}]]
-  :profiles {:clojure-1.8 {:dependencies [[org.clojure/clojure "1.8.0"]]}
+  :profiles {:1.9 {:dependencies [[org.clojure/clojure "1.9.0"]]}
              :uberjar {:aot [zensols.mkproj.core]}
              :appassem {:aot :all}
+             :snapshot {:git-version {:version-cmd "echo -snapshot"}}
              :test
-             {:jvm-opts
-              ["-Dlog4j.configurationFile=test-resources/test-log4j2.xml"
-               "-Xms4g" "-Xmx12g" "-XX:+UseConcMarkSweepGC"]}}
+             {:jvm-opts ["-Dlog4j.configurationFile=test-resources/test-log4j2.xml"
+                         "-Xmx12g"]}}
   :main zensols.mkproj.core)
